; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_kexec.c_kimage_alloc_pages.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_kexec.c_kimage_alloc_pages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.page* (i32, i32)* @kimage_alloc_pages to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.page* @kimage_alloc_pages(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.page*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call %struct.page* @alloc_pages(i32 %8, i32 %9)
  store %struct.page* %10, %struct.page** %5, align 8
  %11 = load %struct.page*, %struct.page** %5, align 8
  %12 = icmp ne %struct.page* %11, null
  br i1 %12, label %13, label %35

13:                                               ; preds = %2
  %14 = load %struct.page*, %struct.page** %5, align 8
  %15 = getelementptr inbounds %struct.page, %struct.page* %14, i32 0, i32 0
  store i32* null, i32** %15, align 8
  %16 = load %struct.page*, %struct.page** %5, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @set_page_private(%struct.page* %16, i32 %17)
  %19 = load i32, i32* %4, align 4
  %20 = shl i32 1, %19
  store i32 %20, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %21

21:                                               ; preds = %31, %13
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %6, align 4
  %24 = icmp ult i32 %22, %23
  br i1 %24, label %25, label %34

25:                                               ; preds = %21
  %26 = load %struct.page*, %struct.page** %5, align 8
  %27 = load i32, i32* %7, align 4
  %28 = zext i32 %27 to i64
  %29 = getelementptr inbounds %struct.page, %struct.page* %26, i64 %28
  %30 = call i32 @SetPageReserved(%struct.page* %29)
  br label %31

31:                                               ; preds = %25
  %32 = load i32, i32* %7, align 4
  %33 = add i32 %32, 1
  store i32 %33, i32* %7, align 4
  br label %21

34:                                               ; preds = %21
  br label %35

35:                                               ; preds = %34, %2
  %36 = load %struct.page*, %struct.page** %5, align 8
  ret %struct.page* %36
}

declare dso_local %struct.page* @alloc_pages(i32, i32) #1

declare dso_local i32 @set_page_private(%struct.page*, i32) #1

declare dso_local i32 @SetPageReserved(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
